--- a/block-BHaaap/index.html
+++ b/block-BHaaap/index.html
@@ -1,17 +1,40 @@
-<!---
-
-### Create a web page with the following characteristics:
-
-1. Heading element(h1) should be at the top of the page.
-2. After the heading, there should be a paragraph.
-3. After the paragraph add an image having all the corner rounded.
-4. Below the image, there should be a circle with red background.
-5. At the bottom of the page, there must be a footer containing few links.
-6. The H1 has 1px red solid borders, background color #D18C1D, and 10px of space between the content and the border (padding)
-7. The paragraph is contained in 600px by 400px boxes with 2px black dotted borders and background color #D1D631
-8. Links have a 3px blue dashed border on the bottom only and background color #A1A1A1
-
-- Using CSS resets is necessary.
-- Use semantic tags and keep the nesting and indentation proper.
-
---->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment-level-1</title>
+    <link rel="stylesheet" href="./stylesheets/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <h1>Cat Articles</h1>
+      <p>
+        When it comes to caring for your cat, you need to get your information
+        from an expert. To see what Purina’s experts have to say about cat
+        nutrition, behavior, development, training and more, explore all our
+        articles below.
+      </p>
+    </header>
+    <main>
+      <article class="art_1">
+        <img
+          class="cat-pic"
+          src="./media/karina-vorozheeva-rW-I87aPY5Y-unsplash.jpg"
+          alt="cat"
+        />
+        <div class="circle"></div>
+      </article>
+    </main>
+    <footer class="footer">
+      <nav>
+        <a class="nav-link" href="#">Facebook</a>
+        <a class="nav-link" href="#">Twitter</a>
+        <a class="nav-link" href="#">Whatsapp</a>
+        <a class="nav-link" href="#">Instagram</a>
+        <a class="nav-link" href="#">Linkedin</a>
+      </nav>
+    </footer>
+  </body>
+</html>
