--- a/block-BHaaaq/index.html
+++ b/block-BHaaaq/index.html
@@ -1,8 +1,38 @@
-<!---
-### Create a page according to the layout shown below
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment-level-1</title>
+    <link rel="stylesheet" href="./stylesheets/style.css" />
+  </head>
+  <body>
+    <main>
+      <h1>Exercise Two</h1>
+      <div class="box box-1"></div>
+      <div>
+        <div class="box box-2"></div>
+        <div class="box box-3"></div>
+      </div>
+      <div>
+        <div class="box box-4"></div>
+        <div class="box box-5"></div>
+      </div>
 
-![Box Model Exercise 2](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/box-model/ex-2.png)
-
-- Using CSS resets is necessary.
-- Use semantic tags and keep the nesting and indentation proper.
---->
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim atque
+        deserunt sapiente sit vel. Harum magni repudiandae hic quisquam est
+        autem maxime aliquid excepturi, eaque libero iusto laudantium animi, sed
+        inventore cum debitis, repellendus voluptatem vitae possimus quis.
+        Dolores quasi cupiditate eveniet illum exercitationem. Veritatis hic
+        laborum id est perspiciatis illo nostrum nulla ad iure, voluptate iste
+        vel officiis fugiat. Fuga laboriosam magni blanditiis quam, eos
+        perferendis. Et esse excepturi repellendus ullam, aperiam explicabo
+        dolore ad perferendis autem amet assumenda placeat labore quae
+        consequuntur? Nobis pariatur incidunt cum quas voluptatibus repellendus
+        earum porro esse quo, iste dolorem fuga beatae non!
+      </p>
+    </main>
+  </body>
+</html>
