Completed Assignment-level-3

--- a/block-BHaaar/index.html
+++ b/block-BHaaar/index.html
@@ -1,8 +1,29 @@
-<!--
-### Create a page according to the layout shown below
-
-![Box Model Exercise 3](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/box-model/ex-3.png)
-
-- Using CSS resets is necessary.
-- Use semantic tags and keep the nesting and indentation proper.
--->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment-level-3</title>
+    <link rel="stylesheet" href="./stylesheets/style.css" />
+  </head>
+  <body>
+    <section>
+      <div>
+        <div class="box box-1 box-big">Google Guideline</div>
+        <div class="box box-2 box-small">Material Design</div>
+        <div class="box box-3 box-small">Doodle Archive</div>
+      </div>
+      <div>
+        <div class="box box-4 box-small">Google+</div>
+        <div class="box box-5 box-big">Design Minutes</div>
+        <div class="box box-6 box-small">Glass Designs</div>
+      </div>
+      <div>
+        <div class="box box-7 box-small">HTML</div>
+        <div class="box box-8 box-small">CSS</div>
+        <div class="box box-9 box-big">Javascript</div>
+      </div>
+    </section>
+  </body>
+</html>
