--- a/block-BHaaau/index.html
+++ b/block-BHaaau/index.html
@@ -1,15 +1,72 @@
-<!---
-### Create a page according to the layout shown below
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment-level-2</title>
+    <link rel="stylesheet" href="./stylesheets/style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>The Box Model,Box-Sizing & Box-Shadow</h1>
+      <hr class="line" />
+    </header>
+    <main>
+      <!-- Section-1 -->
 
-![Box Model Exercise 6](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/box-model/ex-6.png)
+      <section class="sec-1 container">
+        <h2>Exercise-1</h2>
+        <div class="box-1"></div>
+        <ul>
+          <li class="one"></li>
+          <li>Content</li>
+          <li class="two"></li>
+          <li>Padding</li>
+          <li class="three"></li>
+          <li>Border</li>
+          <li class="four"></li>
+          <li>Margin</li>
+        </ul>
+        <hr class="line" />
+      </section>
 
-#### Problems for exercise 2 in the layout
+      <!-- Section-2 -->
 
-- Each parent container has width of 600px and border of 1px;
-- Each children box has width 180px and height 100px as well as margin of 10px;
-- Each child box which is having border has border-width 1px.
-- Note in the first container the boxes do not have any border.
+      <section class="sec-2 container">
+        <h2>Exercise-2</h2>
+        <h5>no border on this boxes .</h5>
+        <div class="box-2">
+          <div class="box-a"></div>
+          <div class="box-a"></div>
+          <div class="box-a"></div>
+        </div>
+        <hr class="line" />
+      </section>
 
-- Using CSS resets is necessary.
-- Use semantic tags and keep the nesting and indentation proper.
---->
+      <!-- Section-3 -->
+
+      <section class="sec-3 container">
+        <h5>1px border on these boxes .</h5>
+        <div class="box-2">
+          <div class="box-b"></div>
+          <div class="box-b"></div>
+          <div class="box-b"></div>
+        </div>
+        <hr class="line" />
+      </section>
+
+      <!-- Section-4 -->
+
+      <section class="sec-4 container">
+        <h5>1px border on these boxes but they are in same line.</h5>
+        <div class="box-2">
+          <div class="box-c"></div>
+          <div class="box-c"></div>
+          <div class="box-c"></div>
+        </div>
+        <hr class="line" />
+      </section>
+    </main>
+  </body>
+</html>
