--- a/block-BHaaaq/index.html
+++ b/block-BHaaaq/index.html
@@ -9,30 +9,33 @@
   </head>
   <body>
     <main>
-      <h1>Exercise Two</h1>
-      <div class="box box-1"></div>
-      <div>
-        <div class="box box-2"></div>
-        <div class="box box-3"></div>
-      </div>
-      <div>
-        <div class="box box-4"></div>
-        <div class="box box-5"></div>
-      </div>
-
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim atque
-        deserunt sapiente sit vel. Harum magni repudiandae hic quisquam est
-        autem maxime aliquid excepturi, eaque libero iusto laudantium animi, sed
-        inventore cum debitis, repellendus voluptatem vitae possimus quis.
-        Dolores quasi cupiditate eveniet illum exercitationem. Veritatis hic
-        laborum id est perspiciatis illo nostrum nulla ad iure, voluptate iste
-        vel officiis fugiat. Fuga laboriosam magni blanditiis quam, eos
-        perferendis. Et esse excepturi repellendus ullam, aperiam explicabo
-        dolore ad perferendis autem amet assumenda placeat labore quae
-        consequuntur? Nobis pariatur incidunt cum quas voluptatibus repellendus
-        earum porro esse quo, iste dolorem fuga beatae non!
-      </p>
+      <section>
+        <h1>Exercise Two</h1>
+        <div class="box solid"></div>
+        <div>
+          <div class="box double"></div>
+          <div class="box dashed"></div>
+        </div>
+        <div>
+          <div class="box dotted"></div>
+          <div class="box no-border"></div>
+        </div>
+      </section>
+      <section>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim atque
+          deserunt sapiente sit vel. Harum magni repudiandae hic quisquam est
+          autem maxime aliquid excepturi, eaque libero iusto laudantium animi,
+          sed inventore cum debitis, repellendus voluptatem vitae possimus quis.
+          Dolores quasi cupiditate eveniet illum exercitationem. Veritatis hic
+          laborum id est perspiciatis illo nostrum nulla ad iure, voluptate iste
+          vel officiis fugiat. Fuga laboriosam magni blanditiis quam, eos
+          perferendis. Et esse excepturi repellendus ullam, aperiam explicabo
+          dolore ad perferendis autem amet assumenda placeat labore quae
+          consequuntur? Nobis pariatur incidunt cum quas voluptatibus
+          repellendus earum porro esse quo, iste dolorem fuga beatae non!
+        </p>
+      </section>
     </main>
   </body>
 </html>
