--- a/block-BHaaar/index.html
+++ b/block-BHaaar/index.html
@@ -4,26 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment-level-3</title>
+    <title>Assignment-level-3 | Box Model</title>
     <link rel="stylesheet" href="./stylesheets/style.css" />
   </head>
   <body>
     <section>
-      <div>
-        <div class="box box-1 box-big">Google Guideline</div>
-        <div class="box box-2 box-small">Material Design</div>
-        <div class="box box-3 box-small">Doodle Archive</div>
-      </div>
-      <div>
-        <div class="box box-4 box-small">Google+</div>
-        <div class="box box-5 box-big">Design Minutes</div>
-        <div class="box box-6 box-small">Glass Designs</div>
-      </div>
-      <div>
-        <div class="box box-7 box-small">HTML</div>
-        <div class="box box-8 box-small">CSS</div>
-        <div class="box box-9 box-big">Javascript</div>
-      </div>
+      <div class="box google box-big">Google Guideline</div>
+      <div class="box material box-small">Material Design</div>
+      <div class="box doodle box-small">Doodle Archive</div>
+      <div class="box google-blue box-small">Google+</div>
+      <div class="box design box-big">Design Minutes</div>
+      <div class="box glass box-small">Glass Designs</div>
+      <div class="box html box-small">HTML</div>
+      <div class="box css box-small">CSS</div>
+      <div class="box js box-big">Javascript</div>
     </section>
   </body>
 </html>
