--- a/block-BHaaau/index.html
+++ b/block-BHaaau/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment-level-2</title>
+    <title>Assignment-level-4</title>
     <link rel="stylesheet" href="./stylesheets/style.css" />
   </head>
   <body>
@@ -17,15 +17,15 @@
 
       <section class="sec-1 container">
         <h2>Exercise-1</h2>
-        <div class="box-1"></div>
+        <div class="color-box"></div>
         <ul>
-          <li class="one"></li>
+          <li class="yellow"></li>
           <li>Content</li>
-          <li class="two"></li>
+          <li class="purple"></li>
           <li>Padding</li>
-          <li class="three"></li>
+          <li class="aqua"></li>
           <li>Border</li>
-          <li class="four"></li>
+          <li class="black"></li>
           <li>Margin</li>
         </ul>
         <hr class="line" />
@@ -36,10 +36,10 @@
       <section class="sec-2 container">
         <h2>Exercise-2</h2>
         <h5>no border on this boxes .</h5>
-        <div class="box-2">
-          <div class="box-a"></div>
-          <div class="box-a"></div>
-          <div class="box-a"></div>
+        <div class="parent-box">
+          <div class="child-box"></div>
+          <div class="child-box"></div>
+          <div class="child-box"></div>
         </div>
         <hr class="line" />
       </section>
@@ -48,10 +48,10 @@
 
       <section class="sec-3 container">
         <h5>1px border on these boxes .</h5>
-        <div class="box-2">
-          <div class="box-b"></div>
-          <div class="box-b"></div>
-          <div class="box-b"></div>
+        <div class="parent-box">
+          <div class="child-box border"></div>
+          <div class="child-box border"></div>
+          <div class="child-box border"></div>
         </div>
         <hr class="line" />
       </section>
@@ -60,10 +60,10 @@
 
       <section class="sec-4 container">
         <h5>1px border on these boxes but they are in same line.</h5>
-        <div class="box-2">
-          <div class="box-c"></div>
-          <div class="box-c"></div>
-          <div class="box-c"></div>
+        <div class="parent-box">
+          <div class="child-box border"></div>
+          <div class="child-box border"></div>
+          <div class="child-box border"></div>
         </div>
         <hr class="line" />
       </section>
