--- a/block-BHaaav/index.html
+++ b/block-BHaaav/index.html
@@ -8,69 +8,71 @@
       content="width=
     , initial-scale=1.0"
     />
-    <title>Assignment-level-4</title>
+    <title>Assignment-level-5</title>
     <link rel="stylesheet" href="./stylesheets/style.css" />
   </head>
   <body>
     <header class="header container">
-      <h2>Solid State</h2>
+      <h2 class="title">Solid State</h2>
       <nav>
-        <a href="#">HOME</a>
-        <a href="#">GENERIC</a>
-        <a href="#">ELEMMENTS</a>
-        <a href="#">LOG IN</a>
-        <a href="#">SIGN UP</a>
+        <a href="#" class="link">HOME</a>
+        <a href="#" class="link">GENERIC</a>
+        <a href="#" class="link">ELEMMENTS</a>
+        <a href="#" class="link">LOG IN</a>
+        <a href="#" class="link">SIGN UP</a>
       </nav>
     </header>
     <main>
       <!-- Section-1 -->
 
-      <section class="sec-1 container">
-        <h1>THIS IS SOLID STATE</h1>
+      <section class="blog-1 container">
+        <h1 class="heading">THIS IS SOLID STATE</h1>
         <hr />
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus.</h3>
+        <h3 class="hero-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus.
+        </h3>
       </section>
 
       <!-- Section-2 -->
 
-      <section class="sec-2 container">
-        <h2>MAGNA ARGU FEUQUET</h2>
+      <section class="blog-2 container">
+        <h2 class="title">MAGNA ARGU FEUQUET</h2>
         <img src="./media/matt-bero-P4e2w7sDahQ-unsplash.jpg" alt="camera" />
-        <p>
+        <p class="blog-text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
           facilis cum laboriosam vel minus. Esse quidem itaque natus similique
           accusamus, aspernatur nostrum quo tenetur ratione quisquam iure. Ullam
           et reprehenderit praesentium, numquam fugiat dolore inventore ea
           consectetur ab. Quos, voluptatibus.
         </p>
-        <a class="btn" href="#">LEARN MORE</a>
+        <a class="link" href="#">LEARN MORE</a>
       </section>
-      <section class="sec-3 container">
-        <h2>MAGNA ARGU FEUQUET</h2>
+      <section class="blog-3 container">
+        <h2 class="title">MAGNA ARGU FEUQUET</h2>
         <img
           src="./media/obi-onyeador-ohqX8M_z85E-unsplash.jpg"
           alt="tablets"
         />
-        <p>
+        <p class="blog-text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
           facilis cum laboriosam vel minus. Esse quidem itaque natus similique
           accusamus, aspernatur nostrum quo tenetur ratione quisquam iure. Ullam
           et reprehenderit praesentium, numquam fugiat dolore inventore ea
           consectetur ab. Quos, voluptatibus.
         </p>
-        <a href="#">LEARN MORE</a>
+        <a href="#" class="link">LEARN MORE</a>
       </section>
-      <section class="sec-4 container">
-        <h2>MAGNA ARGU FEUQUET</h2>
+      <section class="blog-4 container">
+        <h2 class="title">MAGNA ARGU FEUQUET</h2>
         <img src="./media/sigmund-x7-h2yuZVRs-unsplash.jpg" alt="camera" />
-        <p>
+        <p class="blog-text">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
           facilis cum laboriosam vel minus. Esse quidem itaque natus similique
           accusamus, aspernatur nostrum quo tenetur ratione quisquam iure. Ullam
           et reprehenderit praesentium, numquam fugiat dolore inventore ea
           consectetur ab. Quos, voluptatibus.
         </p>
-        <a href="#">LEARN MORE</a>
+        <a href="#" class="link">LEARN MORE</a>
       </section>
     </main>
     <footer class="footer container">
