--- a/block-BHaaav/index.html
+++ b/block-BHaaav/index.html
@@ -24,55 +24,68 @@
     </header>
     <main>
       <!-- Section-1 -->
-
       <section class="blog-1 container">
-        <h1 class="heading">THIS IS SOLID STATE</h1>
-        <hr />
-        <h3 class="hero-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus.
-        </h3>
+        <article>
+          <h1 class="heading">THIS IS SOLID STATE</h1>
+          <hr />
+          <h3 class="hero-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus.
+          </h3>
+        </article>
       </section>
 
       <!-- Section-2 -->
 
       <section class="blog-2 container">
-        <h2 class="title">MAGNA ARGU FEUQUET</h2>
-        <img src="./media/matt-bero-P4e2w7sDahQ-unsplash.jpg" alt="camera" />
-        <p class="blog-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-          facilis cum laboriosam vel minus. Esse quidem itaque natus similique
-          accusamus, aspernatur nostrum quo tenetur ratione quisquam iure. Ullam
-          et reprehenderit praesentium, numquam fugiat dolore inventore ea
-          consectetur ab. Quos, voluptatibus.
-        </p>
-        <a class="link" href="#">LEARN MORE</a>
+        <article>
+          <h2 class="title">MAGNA ARGU FEUQUET</h2>
+          <img src="./media/matt-bero-P4e2w7sDahQ-unsplash.jpg" alt="camera" />
+          <p class="blog-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            facilis cum laboriosam vel minus. Esse quidem itaque natus similique
+            accusamus, aspernatur nostrum quo tenetur ratione quisquam iure.
+            Ullam et reprehenderit praesentium, numquam fugiat dolore inventore
+            ea consectetur ab. Quos, voluptatibus.
+          </p>
+          <a class="link" href="#">LEARN MORE</a>
+        </article>
       </section>
+
+      <!-- Section-3 -->
+
       <section class="blog-3 container">
-        <h2 class="title">MAGNA ARGU FEUQUET</h2>
-        <img
-          src="./media/obi-onyeador-ohqX8M_z85E-unsplash.jpg"
-          alt="tablets"
-        />
-        <p class="blog-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-          facilis cum laboriosam vel minus. Esse quidem itaque natus similique
-          accusamus, aspernatur nostrum quo tenetur ratione quisquam iure. Ullam
-          et reprehenderit praesentium, numquam fugiat dolore inventore ea
-          consectetur ab. Quos, voluptatibus.
-        </p>
-        <a href="#" class="link">LEARN MORE</a>
+        <article>
+          <h2 class="title">MAGNA ARGU FEUQUET</h2>
+          <img
+            src="./media/obi-onyeador-ohqX8M_z85E-unsplash.jpg"
+            alt="tablets"
+          />
+          <p class="blog-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            facilis cum laboriosam vel minus. Esse quidem itaque natus similique
+            accusamus, aspernatur nostrum quo tenetur ratione quisquam iure.
+            Ullam et reprehenderit praesentium, numquam fugiat dolore inventore
+            ea consectetur ab. Quos, voluptatibus.
+          </p>
+          <a href="#" class="link">LEARN MORE</a>
+        </article>
       </section>
+
+      <!-- Section-4 -->
+
       <section class="blog-4 container">
-        <h2 class="title">MAGNA ARGU FEUQUET</h2>
-        <img src="./media/sigmund-x7-h2yuZVRs-unsplash.jpg" alt="camera" />
-        <p class="blog-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
-          facilis cum laboriosam vel minus. Esse quidem itaque natus similique
-          accusamus, aspernatur nostrum quo tenetur ratione quisquam iure. Ullam
-          et reprehenderit praesentium, numquam fugiat dolore inventore ea
-          consectetur ab. Quos, voluptatibus.
-        </p>
-        <a href="#" class="link">LEARN MORE</a>
+        <article>
+          <h2 class="title">MAGNA ARGU FEUQUET</h2>
+          <img src="./media/sigmund-x7-h2yuZVRs-unsplash.jpg" alt="camera" />
+          <p class="blog-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+            facilis cum laboriosam vel minus. Esse quidem itaque natus similique
+            accusamus, aspernatur nostrum quo tenetur ratione quisquam iure.
+            Ullam et reprehenderit praesentium, numquam fugiat dolore inventore
+            ea consectetur ab. Quos, voluptatibus.
+          </p>
+          <a href="#" class="link">LEARN MORE</a>
+        </article>
       </section>
     </main>
     <footer class="footer container">
